<resources>
    <string name="app_name">Show Box</string>
    <string name="movie_poster">movie_poster</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated">Top Rated</string>
    <string name="title">Title</string>
    <string name="user_ratings_lable">User Ratings:</string>
    <string name="release_date_lable">Release Date:</string>
    <string name="synopsis_lable">Synopsis:</string>
    <string name="API_key_error">Insert API key in gradle.properties</string>
    <string name="error_404">Error 404</string>
    <string name="mins">mins</string>
    <string name="video_thumbnail">Video Thumbnail</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="upcoming">Upcoming</string>
    <string name="NetworkNotAvailable">Network Not Available</string>
    <string name="genres">GENRES</string>
    <string name="trailers">TRAILERS</string>
    <string name="cast">CAST</string>
    <string name="reviews">REVIEWS</string>
    <string name="similar_movies">SIMILAR MOVIES</string>
    <string name="ratingContinue">/10</string>
    <string name="share_icon">share Icon</string>
    <string name="star_icon">star Icon</string>
    <string name="twitter_icon">twitter icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="imdb_icon">imdb icon</string>
    <string name="instagram_icon">Instagram icon</string>
</resources>
