<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:fitsSystemWindows="true"
    tools:context=".activity.CastDetailsActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="16dp">

    <FrameLayout
        android:id="@+id/cast_details_frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cast_toolbar">

        <com.srikar.showboxrxjava.customViews.CustomLinearLayout
            android:id="@+id/cast_backdrop_ll"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:tint="#6F000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/cast_details_scrim"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/cast_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark" />

        <android.support.v7.widget.CardView
            android:id="@+id/cast_poster_cv"
            android:layout_width="110dp"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cast_toolbar"
            card_view:cardBackgroundColor="@android:color/transparent"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="0dp"
            card_view:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/cast_poster_iv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_poster"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_action_placeholder_white"
                android:visibility="visible" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/cast_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            tools:text="Name"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:fontFamily="sans-serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cast_poster_cv"
            tools:targetApi="jelly_bean" />

        <TextView
            android:id="@+id/cast_synopsis_tv"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingExtra="4sp"
            android:textColor="@color/gunmetal"
            app:fontFamily="sans-serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cast_title_tv"
            tools:text="Brianne Sidonie Desaulniers (born October 1, 1989), known professionally as Brie Larson, is an American actress, director, and singer." />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cast_synopsis_tv">

            <ImageView
                android:id="@+id/cast_twitter"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:contentDescription="@string/twitter_icon"
                android:src="@drawable/ic_action_placeholder_white" />

            <ImageView
                android:id="@+id/cast_facebook"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:contentDescription="@string/facebook_icon"
                android:src="@drawable/ic_action_placeholder_white" />

            <ImageView
                android:id="@+id/cast_imdb"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:contentDescription="@string/imdb_icon"
                android:src="@drawable/ic_action_placeholder_white" />

            <ImageView
                android:id="@+id/cast_instagram"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:contentDescription="@string/instagram_icon"
                android:src="@drawable/ic_action_placeholder_white" />
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.constraint.ConstraintLayout>
</ScrollView>